adjust css for Menu tab, must fix label wrapping wrt containers

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -17,10 +17,13 @@
 
 .menu-items {
     display: flex;
-    gap: 25px;
+    gap: 30px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    border: 1px dashed bisque;
+    padding: 30px;
+    margin: 40px 80px;
 }
 
 .menu-card {
@@ -30,13 +33,19 @@
 .mini {
     width: 200px;
     height: 200px;
-    box-sizing: border-box;
     border-radius: 20px;
     border: 5px solid #3882F6;
 }
 
+.mini:hover {
+    cursor: pointer;
+    opacity: 75%;
+    transition: opacity 0.2s;
+}
+
 .menu-card p {
-    text-align: justify;
-    text-align-last: center;
-    margin: 0;
+    color: blanchedalmond;
+    font-size: 16px;
+    text-align: center;
+    /* text-align-last: center; */
 }
